Fixed issue with non-collapsed headers at start.

--- a/css/style.css
+++ b/css/style.css
@@ -137,7 +137,6 @@ kbd:hover {
   margin: 0;
 }
 
-.info .toc,
 .info .element-count {
     margin-bottom: 1em;
 }
